--- a/examples/cover/index.html
+++ b/examples/cover/index.html
@@ -34,7 +34,7 @@ function setBackground(elem, styles) {
     elem.style.backgroundSize = styles.backgroundSize
   }
 }
-setBackground(konvas.elem, styles)
+setBackground(konvas.el, styles)
 </script>
 </body>
 </html>
