complete node lock method

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -21,6 +21,9 @@ const konvas = new Konvas('#konvas')
 konvas.addNode({
   x: 0, y: 0, width: 60, height: 60, text: 'Text'
 })
+konvas.addNode({
+  x: 80, y: 80, width: 60, height: 60, text: 'Text'
+})
 </script>
 </body>
 </html>
