增加 dragger，resizer 模块

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -17,16 +17,19 @@
 <div id="konvas"></div>
 <script src="../../dist/konvas.js"></script>
 <script>
-const konvas = new Konvas('#konvas')
+  const width = 600
+  const height = 300
+
+const konvas = new Konvas('#konvas', { scale: 1.5 })
 const node1 = konvas.addNode({
-  x: 0, y: 0, width: 60, height: 60, text: 'Text'
+  x: 80, y: 80, width: 60, height: 60, text: 'Text'
 })
 const div = document.createElement('div')
 div.innerHTML = 'Text'
 node1.wrap(div)
 
 konvas.addNode({
-  x: 80, y: 80, width: 60, height: 60, text: 'Text'
+  x: 600 - 60, y: 300 - 60, width: 60, height: 60, text: 'Text'
 })
 </script>
 </body>
