--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -6,7 +6,7 @@
   * { margin: 0; padding: 0; }
   .konvas {
     background: #dcdcdc;
-    margin: 0 auto;
+    margin: 40px auto;
   }
   .node {
     background: #069430;
@@ -21,7 +21,7 @@
   const height = 300
 
 const konvas = new Konvas('#konvas', {
-  scale: 2,
+  scale: 1.5,
   resizeable: false,
 })
 konvas.addNode({
